# time-series-tools-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/python/: CMakeLists.txt  __init__.py  setup.py
bindings/python/cmake/: Findpybind11.cmake
bindings/python/src/: py_mann_kendall.cpp
include/: add.h
include/time_series_tools/: mann_kendall.h
src/: .add.cpp.swp  CMakeLists.txt  add.cpp  mann_kendall.cpp
tests/: CMakeLists.txt  test_add.cpp  test_mann_kendall.cpp
